manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pong
  labels:
    app.kubernetes.io/part-of: transcendence
